account overflow bug fixed

--- a/src/components/Dropdown/dropdown.scss
+++ b/src/components/Dropdown/dropdown.scss
@@ -46,7 +46,7 @@
             width: 100%;
             height: 200px;
             overflow: auto;
-            background: var(--unnamed-color-ffffff) 0% 0% no-repeat padding-box;
+            background: $white 0% 0% no-repeat padding-box;
             background: #FFFFFF 0% 0% no-repeat padding-box;
             box-shadow: 0px 3px 12px #1E36482E;
 
